fix(mailchimp): Add input/label spacing, tweak placeholder/title

--- a/css/styles.less
+++ b/css/styles.less
@@ -128,7 +128,7 @@ span.date {
 }
 
 .call-to-action-box input[type=email] {
-  margin-left: .25em;
+  margin-left: .5em;
   padding: 0.25em;
   margin-right: .25em;
 }
